// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue/assignment/1tbs > conditional assignment (1) 1`] = `
"<script setup lang="ts">
const foo = true && {
  bar: "baz",
};
</script>

<template>
  <button
    type="button"
    @click="
      () => {
        const foo = true && {
          bar: 'baz',
        };
      }
    "
  >
    Click Me
  </button>
</template>
"
`;

exports[`vue/assignment/1tbs > conditional assignment (2) 1`] = `
"<script setup lang="ts">
const foo = false || {
  bar: "baz",
};
</script>

<template>
  <button
    type="button"
    @click="
      () => {
        const foo = false || {
          bar: 'baz',
        };
      }
    "
  >
    Click Me
  </button>
</template>
"
`;

exports[`vue/assignment/1tbs > conditional assignment (3) 1`] = `
"<script setup lang="ts">
const foo = null ?? {
  bar: "baz",
};
</script>

<template>
  <button
    type="button"
    @click="
      () => {
        const foo = null ?? {
          bar: 'baz',
        };
      }
    "
  >
    Click Me
  </button>
</template>
"
`;

exports[`vue/assignment/1tbs > destructuring assignment (1) 1`] = `
"<script setup lang="ts">
const {
  foo,
  bar: { baz },
} = {};
</script>

<template>
  <button
    type="button"
    @click="
      () => {
        const {
          foo,
          bar: { baz },
        } = {};
      }
    "
  >
    Click Me
  </button>
</template>
"
`;

exports[`vue/assignment/1tbs > destructuring assignment (2) 1`] = `
"<script setup lang="ts">
arr.forEach(
  ({
    data: {
      message: { errors },
    },
  }) => {
    // code
  },
);
</script>

<template>
  <button
    type="button"
    @click="
      () => {
        arr.forEach(
          ({
            data: {
              message: { errors },
            },
          }) => {
            // code
          },
        );
      }
    "
  >
    Click Me
  </button>
</template>
"
`;

exports[`vue/assignment/1tbs > object assignment (1) 1`] = `
"<script setup lang="ts">
const foo = {};
</script>

<template>
  <button
    type="button"
    @click="
      () => {
        const foo = {};
      }
    "
  >
    Click Me
  </button>
</template>
"
`;

exports[`vue/assignment/1tbs > object assignment (2) 1`] = `
"<script setup lang="ts">
const foo = {
  bar: {
    baz: "baz",
  },
};
</script>

<template>
  <button
    type="button"
    @click="
      () => {
        const foo = {
          bar: {
            baz: 'baz',
          },
        };
      }
    "
  >
    Click Me
  </button>
</template>
"
`;

exports[`vue/assignment/1tbs > object assignment (3) 1`] = `
"<script setup lang="ts">
const foo = {
  bar() {},
  ["baz"]() {},
};
</script>

<template>
  <button
    type="button"
    @click="
      () => {
        const foo = {
          bar() {},
          ['baz']() {},
        };
      }
    "
  >
    Click Me
  </button>
</template>
"
`;
